clusters/labinfra/apps/redis.xuperson.org/redis-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/managed-by: flux
