clusters/labinfra/apps/redis.xuperson.org/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: redis
  labels:
    app: redis-server
spec:
  selector:
    app: redis-server
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
  type: ClusterIP
