clusters/labinfra/apps/redis.xuperson.org/redis-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-server
  namespace: redis
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "redis.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: redis.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-server
            port:
              number: 6379
